--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-color: #121214;
     background-image: url(./assets/bg.svg);
     background-position-x: center ;
-    background-position-y: 55% ;
+    background-position-y: -715px ;
 }
 body * {
     font-family: 'Roboto', sans-serif;
@@ -26,7 +26,15 @@ body * {
 
 header {
     margin-bottom: 63px;
+    text-align: center;
 }
+
+#cards {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
 .card {
     padding: 32px 23px;
     text-align: center;
