--- a/style.css
+++ b/style.css
@@ -4,15 +4,30 @@
     box-sizing: border-box;
 }
 
+:root {
+    --card-color-primary: #F7DD43;
+    --card-bg-color: #1D1C19;
+    --bg: url(./assets/bg-yellow.svg);
+}
+
+body.blue {
+    --card-color-primary: #0355b8;
+    --card-bg-color: #202024;
+    --bg: url(./assets/bg-blue.svg);
+}
+
+body.green {
+    --card-color-primary: #127449;
+    --card-bg-color: #1A1F1B;
+    --bg: url(./assets/bg-green.svg);
+}
+
 ul {
     list-style: none;
 }
 
 body {
-    background-color: #121214;
-    background-image: url(./assets/bg.svg);
-    background-position-x: center ;
-    background-position-y: -715px ;
+    background: #121214 var(--bg) no-repeat top center/cover;
 }
 body * {
     font-family: 'Roboto', sans-serif;
@@ -20,7 +35,8 @@ body * {
 
 #app {
     width: fit-content;
-    margin: 52px auto;
+    margin: auto;
+    padding-top: 52px;
 
 }
 
@@ -38,14 +54,14 @@ header {
 .card {
     padding: 32px 23px;
     text-align: center;
-    background: #1D1C19;
-    border-bottom: 2px solid #F7DD43;
+    background: var(--card-bg-color);
+    border-bottom: 2px solid var(--card-color-primary);
     border-radius: 6px;
 }
 
 .card h2 {
     display: flex;
-    border: 1px solid #746615;
+    border: 1px solid var(--card-color-primary);
     padding: 8px 16px;
     border-radius: 6px;
     gap: 16px;
@@ -53,7 +69,7 @@ header {
     width: fit-content;
     margin-inline: auto;
     margin-bottom: 53px;
-    color: #F7DD43;
+    color: var(--card-color-primary);
     align-items: center;
 }
 
@@ -87,4 +103,46 @@ header {
     line-height: 125%;
     text-align: center;
     color: #E1E1E6;
+}
+
+@keyframes appear {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+.card h2:hover,
+.card ul li strong:hover,
+.card ul li img:hover {
+    transform: scale(1.1);
+}
+
+.card h2,
+.card ul li strong,
+.card ul li img {
+    transition: transform .3s;
+}
+
+.card,
+.card h2,
+.card ul li strong,
+.card ul li img {
+    animation: appear .7s;
+}
+
+.card {
+    opacity: 0;
+    animation: appear .2s forwards;
+}
+
+@media (min-width: 800px) {
+    #cards {
+        max-width: 670px;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
